--- a/package.json
+++ b/package.json
@@ -16,5 +16,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "An Experimental try in React to visualize our Digital Realities Gitflow.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rschlenk87/gitflowanimated.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rschlenk87/gitflowanimated/issues"
+  },
+  "homepage": "https://github.com/rschlenk87/gitflowanimated#readme"
 }
